--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4"
   },
